--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /.idea/
 /out/
 /.gradle/
+/.classpath
+/.project
+/.settings/org.eclipse.buildship.core.prefs
+/.settings/org.eclipse.jdt.core.prefs
+/bin/.gitignore
